# EgoisticOS

./: .gitignore  CMakeLists.txt  deploy  deploy.c  filedump.c
boot/: CMakeLists.txt  boot.c  efifilelib.c  efiio.c  efilocatedprotocol.c  efisystab.c  executablelib.c  menu.c  string.c  utils.c
boot/include/: efi.h  eficonst.h  efidef.h  efifilelib.h  efiguid.h  efiio.h  efilocatedprotocol.h  efistruct.h  efisystab.h  ekf.h  elf.h  executablelib.h  menu.h  string.h  utils.h
boot/include/efi/: eficonst.h  efidef.h  efiguid.h  efistruct.h
common/: color.c  framebuffer.c
common/include/: bootparms.h  color.h  framebuffer.h
fs/EFI/BOOT/: BOOTX64.EFI
include/: bool.h  bootparms.h  elf.h  framebuffer.h  int.h  io.h
kernel/: CMakeLists.txt  acpi.c  datetime.c  desktop.c  font.c  framebuffer.c  graphics.c  handler.c  hpet.c  interrupt.c  kbcontroller.c  kbencoder.c  kernel.c  kernel.ld  keyboard.c  pic.c  power.c  rtc.c  scheduler.c  shell.c  string.c  timer.c  window.c  x64.c
kernel/architecture/: apic.c  cpu.c  gdt.c  interrupt.c  io.c  msr.c  pic.c
kernel/architecture/x64/: apic.c  cpu.c  crs.c  gdt.c  interrupt.c  io.c  msr.c  pic.c
kernel/gui/: desktop.c  frame.c  window.c
kernel/include/: acpi.h  datetime.h  desktop.h  font.h  framebuffer.h  graphics.h  handler.h  hpet.h  interrupt.h  ioport.h  kbcontroller.h  kbencoder.h  keyboard.h  memory.h  pic.h  power.h  rtc.h  scheduler.h  shell.h  string.h  timer.h  window.h  x64.h
kernel/include/architecture/: apic.h  cpu.h  interrupt.h  io.h  msr.h
kernel/include/architecture/x64/: apic.h  cpu.h  crs.h  gdt.h  io.h  ioport.h  msr.h  pic.h
kernel/include/gui/: desktop.h  frame.h  window.h
kernel/include/keyboard/: kbcontroller.h
kernel/include/memory/: physicalmemory.h  virtualmemory.h
kernel/keyboard/: kbcontroller.c  kbencoder.c  keyboard.c
kernel/memory/: memory.c  physicalmemory.c  virtualmemory.c
